tests/ui/match/impossible_preds_const_pattern.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/impossible_preds_const_pattern.rs:27:5
   |
LL | /     const ASSOC: usize = 0
LL | |
LL | |     where
LL | |         for<'a> (): Unimplemented<'a>;
   | |______________________________________^ entering unreachable code

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
